--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,6 +57,7 @@ dependencies {
     def compose_version = '1.5.0-alpha01'
     implementation "androidx.compose.ui:ui:$compose_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
+    implementation "androidx.lifecycle:lifecycle-runtime-compose:2.6.1"
     implementation 'androidx.compose.material3:material3:1.1.0-beta01'
 
     def nav_version = "2.5.3"
