--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,6 +58,7 @@ dependencies {
     implementation "androidx.compose.ui:ui:$compose_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
     implementation "androidx.lifecycle:lifecycle-runtime-compose:2.6.1"
+    implementation 'com.google.android.material:material:1.8.0'
     implementation 'androidx.compose.material3:material3:1.1.0-beta01'
 
     def nav_version = "2.5.3"
