--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,7 +57,10 @@ dependencies {
     def compose_version = '1.5.0-alpha01'
     implementation "androidx.compose.ui:ui:$compose_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
-    implementation "androidx.lifecycle:lifecycle-runtime-compose:2.6.1"
+
+    def lifecycle_compose = '2.6.1'
+    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:$lifecycle_compose"
+    implementation "androidx.lifecycle:lifecycle-runtime-compose:$lifecycle_compose"
     implementation 'com.google.android.material:material:1.8.0'
     implementation 'androidx.compose.material3:material3:1.1.0-beta01'
 
@@ -68,6 +71,7 @@ dependencies {
 
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
 
+    implementation "androidx.hilt:hilt-navigation-compose:1.0.0"
     implementation "com.google.dagger:hilt-android:2.44"
     kapt "com.google.dagger:hilt-compiler:2.44"
 
