--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,6 +77,10 @@ dependencies {
     kapt "com.google.dagger:hilt-compiler:2.44"
 
     implementation 'com.jakewharton.timber:timber:5.0.1'
+
+    def room_version = "2.5.1"
+    implementation "androidx.room:room-ktx:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
 }
 
 kapt {
