--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,20 +50,20 @@ android {
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.9.0'
+    implementation 'androidx.core:core-ktx:1.10.0'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
-    implementation 'androidx.activity:activity-compose:1.7.0'
-    implementation 'androidx.compose.material:material:1.4.0'
+    implementation 'androidx.activity:activity-compose:1.7.1'
+    implementation 'androidx.compose.material:material:1.4.3'
 
-    def compose_version = '1.5.0-alpha01'
+    def compose_version = '1.5.0-alpha03'
     implementation "androidx.compose.ui:ui:$compose_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
 
     def lifecycle_compose = '2.6.1'
     implementation "androidx.lifecycle:lifecycle-viewmodel-compose:$lifecycle_compose"
     implementation "androidx.lifecycle:lifecycle-runtime-compose:$lifecycle_compose"
-    implementation 'com.google.android.material:material:1.8.0'
-    implementation 'androidx.compose.material3:material3:1.1.0-beta01'
+    implementation 'com.google.android.material:material:1.9.0'
+    implementation 'androidx.compose.material3:material3:1.1.0-rc01'
 
     def nav_version = "2.5.3"
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
