--- a/app/build.gradle
+++ b/app/build.gradle
@@ -81,6 +81,10 @@ dependencies {
     def room_version = "2.5.1"
     implementation "androidx.room:room-ktx:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
+
+    def vico_version = "1.6.6"
+    implementation "com.patrykandpatrick.vico:core:$vico_version"
+    implementation "com.patrykandpatrick.vico:compose:$vico_version"
 }
 
 kapt {
