--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,8 +18,8 @@ android {
         applicationId "skustra.focus"
         minSdk 26
         targetSdk 33
-        versionCode 1
-        versionName "1.0"
+        versionCode 2
+        versionName "1.0.2"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables {
@@ -108,6 +108,8 @@ dependencies {
     def vico_version = "1.6.6"
     implementation "com.patrykandpatrick.vico:core:$vico_version"
     implementation "com.patrykandpatrick.vico:compose:$vico_version"
+
+    implementation "com.google.accompanist:accompanist-permissions:0.31.2-alpha"
 }
 
 kapt {
