--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,33 +73,33 @@ android {
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.10.0'
+    implementation 'androidx.core:core-ktx:1.10.1'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
-    implementation 'androidx.activity:activity-compose:1.7.1'
+    implementation 'androidx.activity:activity-compose:1.7.2'
     implementation 'androidx.compose.material:material:1.4.3'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.0'
+    implementation 'com.jakewharton.timber:timber:5.0.1'
+    implementation "com.google.accompanist:accompanist-permissions:0.31.2-alpha"
 
-    def compose_version = '1.5.0-alpha03'
+    def compose_version = '1.5.0-beta01'
     implementation "androidx.compose.ui:ui:$compose_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
 
-    def lifecycle_compose = '2.6.1'
-    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:$lifecycle_compose"
-    implementation "androidx.lifecycle:lifecycle-runtime-compose:$lifecycle_compose"
+    def lifecycle_compose_version = '2.6.1'
+    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:$lifecycle_compose_version"
+    implementation "androidx.lifecycle:lifecycle-runtime-compose:$lifecycle_compose_version"
     implementation 'com.google.android.material:material:1.9.0'
-    implementation 'androidx.compose.material3:material3:1.1.0-rc01'
+    implementation 'androidx.compose.material3:material3:1.2.0-alpha02'
 
     def nav_version = "2.5.3"
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
     implementation "androidx.navigation:navigation-compose:$nav_version"
 
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
-
+    def hilt_version = "2.44.2"
+    implementation "com.google.dagger:hilt-android:$hilt_version"
+    kapt "com.google.dagger:hilt-compiler:$hilt_version"
     implementation "androidx.hilt:hilt-navigation-compose:1.0.0"
-    implementation "com.google.dagger:hilt-android:2.44"
-    kapt "com.google.dagger:hilt-compiler:2.44"
-
-    implementation 'com.jakewharton.timber:timber:5.0.1'
 
     def room_version = "2.5.1"
     implementation "androidx.room:room-ktx:$room_version"
@@ -108,8 +108,6 @@ dependencies {
     def vico_version = "1.6.6"
     implementation "com.patrykandpatrick.vico:core:$vico_version"
     implementation "com.patrykandpatrick.vico:compose:$vico_version"
-
-    implementation "com.google.accompanist:accompanist-permissions:0.31.2-alpha"
 }
 
 kapt {
