--- a/build.gradle
+++ b/build.gradle
@@ -9,4 +9,8 @@ plugins {
     id 'org.jetbrains.kotlin.android' version '1.8.10' apply false
     id 'com.google.dagger.hilt.android' version '2.44' apply false
     id 'com.google.devtools.ksp' version '1.8.10-1.0.9' apply false
+    id "org.jlleitschuh.gradle.ktlint" version "11.3.2"
+    id "io.gitlab.arturbosch.detekt" version "1.22.0"
+    id 'com.autonomousapps.dependency-analysis' version "1.20.0"
+    id "com.osacky.doctor" version "0.8.1"
 }
