--- a/gradle.properties
+++ b/gradle.properties
@@ -6,3 +6,5 @@ org.gradle.configureondemand=true
 org.gradle.parallel=true
 org.gradle.vfs.watch=true
 org.gradle.caching=true
+android.defaults.buildfeatures.buildconfig=true
+android.nonFinalResIds=false
